cabal-version:       2.4

name:                haskell-rsa
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Finley McIlwaine, Kegan McIlwaine
maintainer:          finleymcilwaine@gmail.com, kegan.mcilwaine@gmail.com
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     MyLib
  -- other-modules:
  -- other-extensions:
  build-depends:       
    base ^>=4.13.0.0,
    random,
    binary,
    bytestring
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable haskell-rsa
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0, haskell-rsa
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite haskell-rsa-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base ^>=4.13.0.0
